[package]
name = "ft6x06"
version = "0.1.0"
edition = "2021"
authors = ["Shantanu Gaikwad"]
categories = ["embedded", "no-std"]
description = "A platform agnostic driver for the FT6x06 type touch screen driver used on STM32F413 board."

[dependencies]
embedded-hal = "0.2.7"
cortex-m = "0.7"
heapless = "0.7"
panic-semihosting = "0.5.3"
panic-probe = { version = "0.2", features = ["print-rtt"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dev-dependencies]
cortex-m-rt = ">=0.6.15, <0.8"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stm32f4xx-hal = "0.13.2"
panic-semihosting = "0.5.2"
st7789 = "0.6.1"
embedded-graphics = "0.7.1"
display-interface-spi = "0.4"

[profile.dev]
debug = 1 # default is `true`; not needed if not already overridden
opt-level = "z"

[profile.release]
debug = 1 # default is `false`; using `true` is also OK as symbols reside on the host, not the target
opt-level = "z"

[features]
stm32f412 = ["stm32f4xx-hal/stm32f412"]
stm32f413 = ["stm32f4xx-hal/stm32f413", "stm32f4xx-hal/fmpi2c1"]
fsmc_lcd = ["stm32f4xx-hal/fsmc_lcd"]
gesture = []

[[example]]
name = "touch"

[[example]]
name = "multi_touch"

[[example]]
name = "gesture_control"
required-features = ["fsmc_lcd"]

[[example]]
name = "interface"
required-features = ["fsmc_lcd"]

[[example]]
name = "display_touch"
required-features = ["fsmc_lcd"]

[[example]]
name = "glogic"

